# windows-desktop-builds

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: 1.bug_report.yaml  2.feature_request.yaml  3.config_change.yaml
.github/workflows/: maintenance-label-sync.yaml  maintenance-pre-commit.yaml  pypi.yaml
outputs/: windows-desktop-builds.csv
src/wdb/: __main__.py
src/wdb/data/: desktop-build-statistics.xlsx
src/wdb/data/config/: config.yaml
