[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "wdb.version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[project]
name = "windows-desktop-builds"
description = "Retrieves Windows Desktop Builds"
requires-python = ">=3.12"
authors = [
  {email = "12127434+whoDoneItAgain@users.noreply.github.com"},
  {name = "whoDoneItAgain"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dynamic = [
    "version",
    "readme"
]

dependencies = [
    "beautifulsoup4==4.14.2",
    "packaging==25.0",
    "pandas==3.0.0",
    "pyyaml==6.0.2",
    "requests==2.32.5"
]

[project.scripts]
wdb = "wdb.__main__:main"

[tool.setuptools.package-data]
wdb = [
    "data/**/*.yaml",
    "data/**/*.xlsx"
]

[project.urls]
Homepage = "https://github.com/whodoneitagain/windows-desktop-builds"
